--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto 2023</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- https://material.io/resources/icons/?style=baseline -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+    rel="stylesheet">
+    <!-- https://material.io/resources/icons/?style=outline -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Outlined"
+    rel="stylesheet">
+    <!-- https://material.io/resources/icons/?style=round -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Round"
+    rel="stylesheet">
+    <!-- https://material.io/resources/icons/?style=sharp -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Sharp"
+    rel="stylesheet">
+    <!-- https://material.io/resources/icons/?style=twotone -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Two+Tone"
+    rel="stylesheet">
 </head>
 <body>
-    
+
+    <header class="header">
+        <img src="assets/img/Vector.svg" alt="Logo Alura">
+    </header>
+
+    <main class="main">
+        <textarea class="main__box" name="" id="" cols="30" rows="20" placeholder="Ingresa el texto a Encriptar..."></textarea>
+        <p class="main__p"><span class="material-icons-outlined">info</span>Solo letras minúsculas y sin acentos</p>
+
+        <div class="main__btn">
+            <input class="main__btn-button" type="button" value="Encriptar">
+            <input class="main__btn-button des" type="button" value="Desencriptar">
+        </div>
+
+        <div class="main__alert">
+            <h2 class="alert__title">Ningún mensaje fue encontrado</h2>
+            <p class="alert__p">Ingresa el texto que desees encriptar o desencriptar.</p>
+        </div>
+    </main>
+
+    <!-- <footer>
+        Coded by <a href="https://github.com/Juliotornero">Julio Tornero</a>.
+    </footer> -->
 </body>
 </html>
