--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
           
             <div class="alertContainer">
-                <img src="/assets/img/Muñeco.svg" alt="Imagen de un joven con lupa">
+                <img src="assets/img/Muñeco.svg" alt="Imagen de un joven con lupa">
                 <h2 class="alert__title">Ningún mensaje fue encontrado</h2>     
                 <p class="alert__p">Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
